--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -39,7 +39,7 @@
                     @Html.Label("Utworzono od:", new { @style = "float:right" })
                 </div>
                 <div class="col-xs-2">
-                    @Html.TextBox("creationDateFrom", (new DateTime(now.Year, now.Month, 1)).ToString("yyyy/MM/dd"), new { @class = "textarea", @style = "width:80px" })
+                    @Html.TextBox("creationDateFrom", (new DateTime(now.Year, now.Month, 1)).ToString("yyyy/MM/dd"), new { @id = "creationDateFrom", @onchange = "disableButton()", @class = "textarea", @style = "width:80px" })
                 </div>
                 <div class="col-xs-1">
                     @Html.Label("Email:", new { @style = "float:right" })
@@ -60,7 +60,7 @@
                     @Html.Label("Utworzono do:", new { @style = "float:right" })
                 </div>
                 <div class="col-xs-2">
-                    @Html.TextBox("creationDateTo", now.ToString("yyyy/MM/dd"), new { @class = "textarea", @style = "width:80px" })
+                    @Html.TextBox("creationDateTo", now.ToString("yyyy/MM/dd"), new { @id = "creationDateTo", @onchange = "disableButton()", @class = "textarea", @style = "width:80px" })
                 </div>
                 <div class="col-xs-1">
                     @Html.Label("Ulica:", new { @style = "float:right" })
@@ -174,9 +174,13 @@
     function disableButton() {
         var showUserData = document.getElementById("showUserData");
         var showContactRequests = document.getElementById("showContactRequests");
+        var creationDateFrom = document.getElementById("creationDateFrom");
+        var creationDateTo = document.getElementById("creationDateTo");
+
         var submit = document.getElementById("submit");
 
-        if (!showUserData.checked & !showContactRequests.checked)
+        if ((!showUserData.checked & !showContactRequests.checked)
+            || !creationDateFrom.value || !creationDateTo.value)
             submit.disabled = true;
         else
             submit.disabled = false;
