--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -39,7 +39,7 @@
 
     <p />
 
-    <div class="row col-xs-12">
+    <div class="row thumbnail col-xs-12">
             <table class="table table-striped table-bordered">
                 <tr>
                     <th>
