--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -1,5 +1,5 @@
-﻿@*@using PagedList.Mvc;*@
-@model List<LanguageSchool.Models.GetContactInfoListItem>
+﻿@using PagedList.Mvc;
+@model PagedList.IPagedList<LanguageSchool.Models.GetContactInfoListItem>
 
 @using LanguageSchool.Models.ViewModels;
 
@@ -157,7 +157,7 @@
         </div>
     </div>
 
-@*<div class="col-xs-12">
+<div class="col-xs-12">
     <div class="col-xs-6">
     </div>
     <div class="col-xs-2">
@@ -166,7 +166,7 @@
     </div>
     <div class="col-xs-4">
     </div>
-</div>*@
+</div>
 
 <script>
     window.onload = disableButton();
