--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -6,10 +6,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container-fluid">
-    @using (Html.BeginForm())
-    {
-        <div class="row thumbnail col-xs-12">
+<body style="background-color: seashell;">
+    <div class="container-fluid">
+        @using (Html.BeginForm())
+        {
+            <div class="row thumbnail col-xs-12">
                 <div class="col-xs-3">
                     @Html.Label("Kursy:")
                     <font color="gray">
@@ -21,25 +22,25 @@
                     @Html.Label("Szukana fraza:")
                     @Html.TextBox("searchString", null, new { @class = "widetextarea", @style = "width:700px" })
                 </div>
-        </div>
+            </div>
+
+            <p />
+
+            <div class="row col-xs-12">
+                <div class="col-xs-10">
+                </div>
+                <div class="col-xs-1">
+                    <button class="btn btn-default" type="reset">Przywróć</button>
+                </div>
+                <div class="col-xs-1">
+                    <button class="btn btn-default" id="submit" type="submit">Szukaj</button>
+                </div>
+            </div>
+        }
 
         <p />
 
-        <div class="row col-xs-12">
-            <div class="col-xs-10">
-            </div>
-            <div class="col-xs-1">
-                <button class="btn btn-default" type="reset">Przywróć</button>
-            </div>
-            <div class="col-xs-1">
-                <button class="btn btn-default" id="submit" type="submit">Szukaj</button>
-            </div>
-        </div>
-    }
-
-    <p />
-
-    <div class="row thumbnail col-xs-12">
+        <div class="row thumbnail col-xs-12">
             <table class="table table-striped table-bordered">
                 <tr>
                     <th>
@@ -70,7 +71,7 @@
                     </th>
                 </tr>
 
-            @foreach (var item in Model)
+                @foreach (var item in Model)
             {
 
                 var fontColor = "black";
@@ -108,13 +109,14 @@
             </table>
         </div>
     </div>
-<div class="col-xs-12">
-    <div class="col-xs-6">
+    <div class="col-xs-12">
+        <div class="col-xs-6">
+        </div>
+        <div class="col-xs-2">
+            @Html.PagedListPager(Model, page => Url.Action("List",
+        new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, searchString = ViewBag.searchString, showActivated = ViewBag.showActivated, showDeactivated = ViewBag.showDeactivated, page }))
+        </div>
+        <div class="col-xs-4">
+        </div>
     </div>
-    <div class="col-xs-2">
-        @Html.PagedListPager(Model, page => Url.Action("List",
-        new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
-    </div>
-    <div class="col-xs-4">
-    </div>
-</div>
+</body>
