--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -96,10 +96,6 @@
         <div class="row thumbnail col-xs-12">
             <table class="table table-striped table-bordered">
                 <tr>
-                    @*<th>
-                                            @Html.ActionLink("Utworzono", "List", new { sortColumn = "creationDate", sortDirection = ViewBag.sortDirection, page = 1 },
-                        new { style = "text-decoration:none; color:black" })
-                                        </th>*@
                     <th>
                         Utworzono
                     </th>
@@ -162,7 +158,21 @@
     </div>
     <div class="col-xs-2">
         @Html.PagedListPager(Model, page => Url.Action("List",
-        new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
+            new
+            {
+                creationDateFrom = ViewBag.creationDateFrom,
+                fullName = ViewBag.fullName,
+                city = ViewBag.city,
+                street = ViewBag.street,
+                phoneNumber = ViewBag.phoneNumber,
+                emailAdress = ViewBag.emailAdress,
+                showUserData = ViewBag.showUserData,
+                showContactRequests = ViewBag.showContactRequests,
+                sortColumn = ViewBag.sortColumn,
+                sortDirection = ViewBag.sortDirection,
+                page
+            }
+        ))
     </div>
     <div class="col-xs-4">
     </div>
