--- a/LanguageSchool/Views/Message/Details.cshtml
+++ b/LanguageSchool/Views/Message/Details.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+<div class="thumbnail">
     <dl class="dl-horizontal">
         <dt>
             Tytuł:
