--- a/LanguageSchool/Views/UserData/Create.cshtml
+++ b/LanguageSchool/Views/UserData/Create.cshtml
@@ -5,124 +5,126 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
+    <div class="thumbnail">
+        @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Rola</strong>
-            </div>
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.RoleId, Model.Roles, new { @class = "form-control" })
-            </div>
-        </div>
+        <div class="form-horizontal">
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Imię</strong>
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Rola</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.RoleId, Model.Roles, new { @class = "form-control" })
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Nazwisko</strong>
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Imię</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Surname, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Surname, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Miasto</strong>
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Nazwisko</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Surname, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Surname, "", new { @class = "text-danger" })
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Ulica</strong>
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Miasto</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Street, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Numer domu</strong>
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Ulica</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Street, "", new { @class = "text-danger" })
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.HouseNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HouseNumber, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Numer mieszkania</strong>
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Numer domu</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.HouseNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.HouseNumber, "", new { @class = "text-danger" })
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.HomeNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HomeNumber, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Publiczny numer telefonu</strong>
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Numer mieszkania</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.HomeNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.HomeNumber, "", new { @class = "text-danger" })
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PublicPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PublicPhoneNumber, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Prywatny numer telefonu</strong>
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Publiczny numer telefonu</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.PublicPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.PublicPhoneNumber, "", new { @class = "text-danger" })
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PrivatePhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PrivatePhoneNumber, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Adres email</strong>
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Prywatny numer telefonu</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.PrivatePhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.PrivatePhoneNumber, "", new { @class = "text-danger" })
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EmailAdress, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EmailAdress, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Komentarz</strong>
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Adres email</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.EmailAdress, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.EmailAdress, "", new { @class = "text-danger" })
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Utwórz" class="btn btn-default" />
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Komentarz</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Utwórz" class="btn btn-default" />
+                </div>
             </div>
         </div>
     </div>
