--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -80,7 +80,23 @@
     <p />
 
     <div class="row col-xs-12">
-        <div class="col-xs-10">
+        <div class="pagination.forlist col-xs-10">
+            @Html.PagedListPager(Model, page => Url.Action("List",
+                new
+                {
+                    creationDateFrom = ViewBag.creationDateFrom,
+                    fullName = ViewBag.fullName,
+                    city = ViewBag.city,
+                    street = ViewBag.street,
+                    phoneNumber = ViewBag.phoneNumber,
+                    emailAdress = ViewBag.emailAdress,
+                    showUserData = ViewBag.showUserData,
+                    showContactRequests = ViewBag.showContactRequests,
+                    sortColumn = ViewBag.sortColumn,
+                    sortDirection = ViewBag.sortDirection,
+                    page
+                }
+            ))
         </div>
         <div class="col-xs-1">
             <button class="btn btn-default" type="reset">Przywróć</button>
@@ -152,31 +168,6 @@
             </table>
         </div>
     </div>
-
-<div class="col-xs-12">
-    <div class="col-xs-6">
-    </div>
-    <div class="col-xs-2">
-        @Html.PagedListPager(Model, page => Url.Action("List",
-            new
-            {
-                creationDateFrom = ViewBag.creationDateFrom,
-                fullName = ViewBag.fullName,
-                city = ViewBag.city,
-                street = ViewBag.street,
-                phoneNumber = ViewBag.phoneNumber,
-                emailAdress = ViewBag.emailAdress,
-                showUserData = ViewBag.showUserData,
-                showContactRequests = ViewBag.showContactRequests,
-                sortColumn = ViewBag.sortColumn,
-                sortDirection = ViewBag.sortDirection,
-                page
-            }
-        ))
-    </div>
-    <div class="col-xs-4">
-    </div>
-</div>
 
 <script>
     window.onload = disableButton();
