--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -80,7 +80,7 @@
     <p />
 
     <div class="row col-xs-12">
-        <div class="pagination.forlist col-xs-10">
+        <div class="col-xs-10">
             @Html.PagedListPager(Model, page => Url.Action("List",
                 new
                 {
@@ -150,12 +150,19 @@
                             @item.Street
                         </td>
                         <td>
-                            @item.PhoneNumber
+                            
+                            @if (item.IsContactRequest == 1)
+                            {
+                                @Html.ActionLink(item.PhoneNumber, "Details", "ContactRequest", new { id = item.Id }, null)
+                            }
+                            else
+                            {
+                                @item.PhoneNumber
+                            }
                         </td>
                         <td>
                             @item.EmailAdress
                         </td>
-
                         <td>
                             @if (item.Comment != null)
                             {
