--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -15,26 +15,6 @@
 
         <div class="row thumbnail col-xs-12">
             <div class="row">
-                <div class="col-xs-4">
-                </div>
-                <div class="col-xs-1">
-                    @Html.Label("Użytkownik:", new { @style = "float:right" })
-                </div>
-                <div class="col-xs-3">
-                    @Html.TextBox("fullName", null, new { @class = "textarea", @style = "width:300px" })
-                </div>
-                <div class="col-xs-2">
-                    @Html.Label("Typ:", new { @style = "float:right" })
-                </div>
-                <div class="col-xs-2">
-                    <font color="gray">
-                        dane @Html.CheckBox("showUserData", true, new { @id = "showUserData", @onchange = "disableButton()" })
-                        prośby @Html.CheckBox("showContactRequests", false, new { @id = "showContactRequests", @onchange = "disableButton()" })
-                    </font>
-                </div>
-            </div>
-            <p />
-            <div class="row">
                 <div class="col-xs-2">
                     @Html.Label("Utworzono od:", new { @style = "float:right" })
                 </div>
@@ -42,16 +22,19 @@
                     @Html.TextBox("creationDateFrom", (new DateTime(now.Year, now.Month, 1)).ToString("yyyy/MM/dd"), new { @id = "creationDateFrom", @onchange = "disableButton()", @class = "textarea", @style = "width:80px" })
                 </div>
                 <div class="col-xs-1">
-                    @Html.Label("Email:", new { @style = "float:right" })
+                    @Html.Label("Użytkownik:", new { @style = "float:right" })
                 </div>
                 <div class="col-xs-3">
-                    @Html.TextBox("emailAdress", null, new { @class = "textarea", @style = "width:200px" })
+                    @Html.TextBox("fullName", (string)ViewBag.fullName, new { @class = "textarea", @style = "width:300px" })
                 </div>
                 <div class="col-xs-2">
-                    @Html.Label("Miasto:", new { @style = "float:right" })
+                    @Html.Label("Typ:", new { @style = "float:right" })
                 </div>
                 <div class="col-xs-2">
-                    @Html.TextBox("city", null, new { @class = "textarea", @style = "width:120px" })
+                    <font color="gray">
+                        dane @Html.CheckBox("showUserData", (bool)ViewBag.showUserData, new { @id = "showUserData", @onchange = "disableButton()" })
+                        prośby @Html.CheckBox("showContactRequests", (bool)ViewBag.showContactRequests, new { @id = "showContactRequests", @onchange = "disableButton()" })
+                    </font>
                 </div>
             </div>
             <p />
@@ -63,16 +46,39 @@
                     @Html.TextBox("creationDateTo", now.ToString("yyyy/MM/dd"), new { @id = "creationDateTo", @onchange = "disableButton()", @class = "textarea", @style = "width:80px" })
                 </div>
                 <div class="col-xs-1">
+                    @Html.Label("Email:", new { @style = "float:right" })
+                </div>
+                <div class="col-xs-3">
+                    @Html.TextBox("emailAdress", (string)ViewBag.emailAdress, new { @class = "textarea", @style = "width:200px" })
+                </div>
+                <div class="col-xs-2">
+                    @Html.Label("Miasto:", new { @style = "float:right" })
+                </div>
+                <div class="col-xs-2">
+                    @Html.TextBox("city", (string)ViewBag.city, new { @class = "textarea", @style = "width:120px" })
+                </div>
+            </div>
+            <p />
+            <div class="row">
+                <div class="col-xs-2">
+                    @Html.Label("Godziny:", new { @style = "float:right" })
+                </div>
+                <div class="col-xs-2">
+                    @Html.TextBox("od", (int)ViewBag.prefferedHoursFrom, new { @id = "prefferedHoursFrom", @onchange = "disableButton()", @class = "textarea", @style = "width:30px" })
+                    -
+                    @Html.TextBox("do", (int)ViewBag.prefferedHoursTo, new { @id = "prefferedHoursTo", @onchange = "disableButton()", @class = "textarea", @style = "width:30px" })
+                </div>
+                <div class="col-xs-1">
                     @Html.Label("Ulica:", new { @style = "float:right" })
                 </div>
                 <div class="col-xs-3">
-                    @Html.TextBox("street", null, new { @class = "textarea", @style = "width:300px" })
+                    @Html.TextBox("street", (string)ViewBag.street, new { @class = "textarea", @style = "width:300px" })
                 </div>
                 <div class="col-xs-2">
                     @Html.Label("Telefon:", new { @style = "float:right" })
                 </div>
                 <div class="col-xs-2">
-                    @Html.TextBox("phoneNumber", null, new { @class = "textarea", @style = "width:120px" })
+                    @Html.TextBox("phoneNumber", (string)ViewBag.phoneNumber, new { @class = "textarea", @style = "width:120px" })
                 </div>
             </div>
         </div>
@@ -85,6 +91,9 @@
                 new
                 {
                     creationDateFrom = ViewBag.creationDateFrom,
+                    creationDateTo = ViewBag.creationDateTo,
+                    prefferedHoursFrom = ViewBag.prefferedHoursFrom,
+                    prefferedHoursTo = ViewBag.prefferedHoursTo,
                     fullName = ViewBag.fullName,
                     city = ViewBag.city,
                     street = ViewBag.street,
