--- a/LanguageSchool/Views/ContactRequest/Create.cshtml
+++ b/LanguageSchool/Views/ContactRequest/Create.cshtml
@@ -37,10 +37,19 @@
 
             <div class="form-group">
                 <div class="control-label col-md-2">
-                    <strong>Godziny kontaktu</strong>
+                    <strong>Godziny kontaktu od</strong>
                 </div>
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.PreferredHours, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.PreferredHoursFrom, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Godziny kontaktu do</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.PreferredHoursTo, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
 
