Rozwiązanie problemu enkrypcji, początkowe zmiany w  testach

--- a/LanguageSchool/Views/Course/Details.cshtml
+++ b/LanguageSchool/Views/Course/Details.cshtml
@@ -14,7 +14,7 @@
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.StartDate)
+                @Model.StartDate.ToString("yyyy/MM/dd")
             </dd>
 
             <dt>
