Czas pracy dla usera szkic, poprawka wyświetlania dla tworzenia wiadomości

--- a/LanguageSchool/Views/Message/Create.cshtml
+++ b/LanguageSchool/Views/Message/Create.cshtml
@@ -9,7 +9,7 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+    <div class="form-horizontal thumbnail">
 
         <div class="form-group">
             <div class="control-label col-md-2">
