--- a/LanguageSchool/Views/UserData/Create.cshtml
+++ b/LanguageSchool/Views/UserData/Create.cshtml
@@ -17,7 +17,7 @@
                     <strong>Rola</strong>
                 </div>
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.RoleId, Model.Roles, new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.RoleId, Model.Roles, new { @class = "form-control", @onchange = "RoleChanged(this.value)" })
                 </div>
             </div>
 
@@ -120,16 +120,77 @@
                     @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
                 </div>
             </div>
+        </div>
+    </div>
+    <div id="timetable" class="thumbnail" style="display: none">
+        <table class="table table-striped table-bordered">
+            <tr>
+                <th>
+                    Poniedziałek
+                </th>
+                <th>
+                    Wtorek
+                </th>
+                <th>
+                    Środa
+                </th>
+                <th>
+                    Czwartek
+                </th>
+                <th>
+                    Piątek
+                </th>
+                <th>
+                    Sobota
+                </th>
+                <th>
+                    Niedziela
+                </th>
+            </tr>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Utwórz" class="btn btn-default" />
-                </div>
-            </div>
+            @**
+    foreach (var item in Model)
+    {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CreationDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LessonSubject.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Comment)
+                    </td>
+                    <td>
+                        <a href="@Url.Action("Download", "Material", new { id = item.Id })" style="color:black">
+                            <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
+                        </a>
+                    </td>
+                </tr>
+            }*@
+        </table>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Utwórz" class="btn btn-default" />
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+<script>
+    function RoleChanged(RoleId)
+    {
+        var TeacherRoleId = 3;
+
+        timetable = document.getElementById("timetable");
+
+        if (RoleId == TeacherRoleId)
+            timetable.style.display = "block";
+        else
+            timetable.style.display = "none";
+    }
+</script>
